[package]
name = "autoquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
levenberg-marquardt = "0.12.0"
linregress = "0.5.0"
nalgebra = "0.30.1"
num = "0.4.0"
plotters = "0.3.4"
rand = "0.8.5"
rawloader = {path="rawloader"}
statrs = "0.16.0"
varpro = "0.4.0"
