[package]
name = "autoquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fitting = ["varpro"]
generation = ["rand", "statrs"]
rawloading = ["rawloader"]
plotting = ["plotters"]

[dependencies]
anyhow = "1.0.66"
nalgebra = "0.30.1"
num = "0.4.0"
plotters = {version = "0.3.4", optional = true}
rand = {version = "0.8.5", optional = true}
rawloader = { path = "rawloader", optional = true }
statrs = {version = "0.16.0", optional = true}
varpro = { version = "0.4.0", optional = true }
